// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiComment is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiComment testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="ouiCommentTimeline"
  >
    <div
      class="ouiCommentTimeline__content"
    >
      <div
        class="ouiCommentTimeline__icon--default ouiCommentTimeline__icon--regular"
      >
        <span
          data-ouiicon-type="user"
        />
      </div>
    </div>
  </div>
  <figure
    class="ouiCommentEvent ouiCommentEvent--regular"
  >
    <figcaption
      class="ouiCommentEvent__header"
    >
      <div
        class="ouiCommentEvent__headerData"
      >
        <div
          class="ouiCommentEvent__headerUsername"
        >
          someuser
        </div>
        <div
          class="ouiCommentEvent__headerEvent"
        />
      </div>
    </figcaption>
  </figure>
</div>
`;

exports[`OuiComment props event is rendered 1`] = `
<div
  class="ouiComment"
>
  <div
    class="ouiCommentTimeline"
  >
    <div
      class="ouiCommentTimeline__content"
    >
      <div
        class="ouiCommentTimeline__icon--default ouiCommentTimeline__icon--regular"
      >
        <span
          data-ouiicon-type="user"
        />
      </div>
    </div>
  </div>
  <figure
    class="ouiCommentEvent ouiCommentEvent--regular"
  >
    <figcaption
      class="ouiCommentEvent__header"
    >
      <div
        class="ouiCommentEvent__headerData"
      >
        <div
          class="ouiCommentEvent__headerUsername"
        >
          someuser
        </div>
        <div
          class="ouiCommentEvent__headerEvent"
        >
          commented
        </div>
      </div>
    </figcaption>
  </figure>
</div>
`;

exports[`OuiComment props timelineIcon is rendered 1`] = `
<div
  class="ouiComment"
>
  <div
    class="ouiCommentTimeline"
  >
    <div
      class="ouiCommentTimeline__content"
    >
      <div
        class="ouiCommentTimeline__icon--regular"
      >
        <div
          aria-label="Mario"
          class="ouiAvatar ouiAvatar--l ouiAvatar--user"
          style="background-color:#f1d86f;color:#000000"
          title="Mario"
        >
          <span
            aria-hidden="true"
          >
            M
          </span>
        </div>
      </div>
    </div>
  </div>
  <figure
    class="ouiCommentEvent ouiCommentEvent--regular"
  >
    <figcaption
      class="ouiCommentEvent__header"
    >
      <div
        class="ouiCommentEvent__headerData"
      >
        <div
          class="ouiCommentEvent__headerUsername"
        >
          someuser
        </div>
        <div
          class="ouiCommentEvent__headerEvent"
        />
      </div>
    </figcaption>
  </figure>
</div>
`;

exports[`OuiComment props timestamp is rendered 1`] = `
<div
  class="ouiComment"
>
  <div
    class="ouiCommentTimeline"
  >
    <div
      class="ouiCommentTimeline__content"
    >
      <div
        class="ouiCommentTimeline__icon--default ouiCommentTimeline__icon--regular"
      >
        <span
          data-ouiicon-type="user"
        />
      </div>
    </div>
  </div>
  <figure
    class="ouiCommentEvent ouiCommentEvent--regular"
  >
    <figcaption
      class="ouiCommentEvent__header"
    >
      <div
        class="ouiCommentEvent__headerData"
      >
        <div
          class="ouiCommentEvent__headerUsername"
        >
          someuser
        </div>
        <div
          class="ouiCommentEvent__headerEvent"
        />
        <div
          class="ouiCommentEvent__headerTimestamp"
        >
          <time>
            21 days ago
          </time>
        </div>
      </div>
    </figcaption>
  </figure>
</div>
`;

exports[`OuiComment props type is rendered 1`] = `
<div
  class="ouiComment ouiComment--update"
>
  <div
    class="ouiCommentTimeline"
  >
    <div
      class="ouiCommentTimeline__content"
    >
      <div
        class="ouiCommentTimeline__icon--default ouiCommentTimeline__icon--update"
      >
        <span
          data-ouiicon-type="dot"
        />
      </div>
    </div>
  </div>
  <div
    class="ouiCommentEvent ouiCommentEvent--update"
  >
    <div
      class="ouiCommentEvent__header"
    >
      <div
        class="ouiCommentEvent__headerData"
      >
        <div
          class="ouiCommentEvent__headerUsername"
        >
          someuser
        </div>
        <div
          class="ouiCommentEvent__headerEvent"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiComment renders a body 1`] = `
<div
  class="ouiComment ouiComment--hasBody"
>
  <div
    class="ouiCommentTimeline"
  >
    <div
      class="ouiCommentTimeline__content"
    >
      <div
        class="ouiCommentTimeline__icon--default ouiCommentTimeline__icon--regular"
      >
        <span
          data-ouiicon-type="user"
        />
      </div>
    </div>
  </div>
  <figure
    class="ouiCommentEvent ouiCommentEvent--regular"
  >
    <figcaption
      class="ouiCommentEvent__header"
    >
      <div
        class="ouiCommentEvent__headerData"
      >
        <div
          class="ouiCommentEvent__headerUsername"
        >
          someuser
        </div>
        <div
          class="ouiCommentEvent__headerEvent"
        />
      </div>
    </figcaption>
    <div
      class="ouiCommentEvent__body"
    >
      <p>
        This is the body.
      </p>
    </div>
  </figure>
</div>
`;
